Add LZW compression to export/import

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             document.getElementById("sdbm").innerHTML = bloom.hashes.sdbm(val);
 
-            document.getElementById("indices").innerHTML = bloom.hashes.get_indices(val);
+            document.getElementById("indices").innerHTML = bloom.hashes.getIndices(val);
         }
 
         var add = function(e) {
